# ApprovalKit

./: .env.example  .gitignore  BLOG_POST.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.api  HACKATHON.md  Makefile  README.md  SECURITY.md  SETUP.md  SOLVED.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.yml  mcp_server.py  mkdocs.yml  setup.sh
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/: pull_request_template.md
ack-verifier/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
api/: alembic.ini  config.py  constants.py  database.py  main.py  migrations.py  requirements.txt  utils.py
auth0-actions/: credentials-exchange.js  post-login.js
demos/: AGENT_DEMOS_PLAN.md  README.md  comms_agent.py  devops_agent.py  ecommerce_agent.py  fintech_agent.py  hr_agent.py  opensource_agent.py  research_agent.py  setup_rules.py
docs/: README.md  approval-models.md  architecture.md  providers.md  quickstart.md  rest-api.md  sdk-python.md  sdk-typescript.md  security.md  self-hosting.md
examples/: README.md  approvalkit_sdk.py  shopping_bot.py
fga/: model.fga  tuples.json
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json
healthcare-agent/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
scripts/: demo_devops_agent.py  demo_ecommerce_agent.py  seed_demo_data.py  setup.py  setup_auth0.py  (+1 more)
sdk/: README.md  pyproject.toml
sdk/approvalkit/: __init__.py  mcp_server.py
(+305 files in other folders)
