[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "approvalkit"
version = "0.1.0"
description = "Human approval middleware for AI agents — plug in with one decorator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "httpx>=0.24",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.scripts]
approvalkit-mcp = "approvalkit.mcp_server:main"

[project.urls]
Homepage = "https://github.com/yigitkizil/ApprovalKit"
Documentation = "http://localhost:3000/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["approvalkit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
